[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
indicatif.workspace = true
clap.workspace = true
brush-process = { path = "../brush-process", default-features = false }
brush-vfs = { path = "../brush-vfs", default-features = false }

tracing.workspace = true
tokio-stream.workspace = true
humantime.workspace = true
log.workspace = true
anyhow.workspace = true

[features]
default = ["desktop-dialogs"]
desktop-dialogs = ["brush-vfs/desktop-dialogs", "brush-process/desktop-dialogs"]

[lints]
workspace = true
