
[package]
name = "brush-process"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-train = { path = "../brush-train", default-features = false }
brush-dataset = { path = "../brush-dataset", default-features = false }
brush-vfs = { path = "../brush-vfs", default-features = false }
brush-serde = { path = "../brush-serde", default-features = false }

burn-wgpu.workspace = true

alphanumeric-sort.workspace = true
anyhow.workspace = true
async-fn-stream.workspace = true
burn.workspace = true
burn-cubecl.workspace = true
clap.workspace = true
rand.workspace = true
log.workspace = true
glam.workspace = true
web-time.workspace = true
image.workspace = true
tracing.workspace = true

tokio = { workspace = true, features = ["io-util", "rt"] }
tokio-stream.workspace = true
tokio_with_wasm.workspace = true

[features]
default = ["desktop-dialogs"]
desktop-dialogs = [
    "brush-vfs/desktop-dialogs",
    "brush-dataset/desktop-dialogs",
    "brush-serde/desktop-dialogs",
    "brush-train/desktop-dialogs",
]

[target.'cfg(target_family = "wasm")'.dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rerun.workspace = true

[lints]
workspace = true
